# ijacoco

./: .gitignore  README.md  check-prereq.sh  prepare-env.sh  pyproject.toml
_work/finerts-shas/: apache_commons-collections.json
_work/projects/: projects.json  projects_config.json
bjacoco/: .appveyor.yml  .gitignore  pom.xml
bjacoco/bjacoco/: assembly.xml  pom.xml
bjacoco/bjacoco-maven-plugin/: .project  pom.xml
bjacoco/bjacoco-maven-plugin/src/org/bjacoco/maven/: AbstractAgentMojo.java  AbstractJacocoMojo.java  AbstractReportMojo.java  AgentITMojo.java  AgentMojo.java  CheckMojo.java  DumpMojo.java  FileFilter.java  InstrumentMojo.java  MergeMojo.java  ReportAggregateMojo.java  ReportITMojo.java  ReportMojo.java  ReportSupport.java  RestoreMojo.java  RuleConfiguration.java
bjacoco/org.bjacoco.agent/: .project  README.TXT  pom.xml
bjacoco/org.bjacoco.agent.rt/: .project  pom.xml
bjacoco/org.bjacoco.agent/src/org/bjacoco/agent/: AgentJar.java  package-info.java
bjacoco/org.bjacoco.build/: .project  pom.xml
bjacoco/org.bjacoco.core/: .project  pom.xml
bjacoco/org.bjacoco.core/src/org/bjacoco/core/: BJaCoCo.java  bjacoco.properties  package-info.java
bjacoco/org.bjacoco.report/: .project  pom.xml
bjacoco/org.bjacoco.report/src/org/bjacoco/report/: DirectorySourceFileLocator.java  FileMultiReportOutput.java  ILanguageNames.java  IMultiReportOutput.java  IReportGroupVisitor.java  IReportVisitor.java  ISourceFileLocator.java  InputStreamSourceFileLocator.java  JavaNames.java  MultiReportVisitor.java  MultiSourceFileLocator.java  ZipMultiReportOutput.java  package-info.java
ijacoco/: pom.xml
ijacoco/ijacoco/: assembly.xml  pom.xml
ijacoco/ijacoco-maven-plugin/: pom.xml
ijacoco/org.ijacoco.agent/: README.TXT  pom.xml
ijacoco/org.ijacoco.agent.rt/: pom.xml
ijacoco/org.ijacoco.build/: pom.xml  publish.sh
ijacoco/org.ijacoco.core/: pom.xml
ijacoco/org.ijacoco.report/: pom.xml
src/ijacoco/: build_project.py  config_helper.py  maven_utils.py  plot_and_read_coverage.py
src/ijacoco/paper/: data_helper.py  numbers_helper.py  paper_data.py  plots.py  plots_individual_projects.py  results.py
(+515 files in other folders)
